# distiller

./: .env.example  .gitignore  Dockerfile  INSTALL.md  README.md  pipeline.py  pyproject.toml  setup.sh
.claude/: journal.md
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: functions.baml  generators.baml  types.baml
components/: clean_pii.yaml  ingest.yaml  parse.yaml
config/: flow-judge.modelfile  pii_patterns.yaml  scoring.yaml
distiller/: __init__.py  cli.py  llm_providers.py
hooks/: log_interaction.sh
schema/: raw_logs.sql
scripts/: clean_pii.py  export_chatml.py  ingest.py  init_db.py  log_event.py  parse.py  score_quality.py  setup_schedule.py  storage.py
tests/: conftest.py  test_ingest.py  test_log_event.py  test_schema.py
